use a better package name

--- a/elsevier.ipynb
+++ b/elsevier.ipynb
@@ -1567,7 +1567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('mlcode/dump_18507772.html', 'rb') as fp:\n",
+    "with open('nlpready/dump_18507772.html', 'rb') as fp:\n",
     "    soup = BeautifulSoup(fp, 'html.parser')"
    ]
   },
