--- a/selenium.ipynb
+++ b/selenium.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "from scifeeder.selenium_cls import Selenium\n",
-    "from scifeeder.issn import DATA"
+    "from scifeeder.issn import ISSN_MAP"
    ]
   },
   {
@@ -74,9 +74,9 @@
     "    if (p1.issn not in DATA) and p1.doi and p1.year > 1980 and counts[p1.issn] > 0:\n",
     "        paper = p1\n",
     "        break\n",
-    "print(idx, len(papers), len(counts), len(DATA))\n",
+    "print(idx, len(papers), len(counts), len(ISSN_MAP))\n",
     "if paper:\n",
-    "    paper.issn in DATA"
+    "    paper.issn in ISSN_MAP"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "paper = papers[204]"
+    "paper = papers[311]"
    ]
   },
   {
@@ -130,14 +130,14 @@
    },
    "outputs": [],
    "source": [
-    "from scifeeder.selenium_cls import Selenium, Soup, UndetectedSelenium\n",
+    "from scifeeder.selenium_cls import Selenium, Soup, StealthSelenium\n",
     "\n",
-    "from scifeeder.issn import DATA\n",
+    "from scifeeder.issn import ISSN_MAP\n",
     "\n",
-    "assert paper.issn in DATA and paper.doi, paper\n",
-    "# web = UndetectedSelenium(timeout=15, headless=True)\n",
+    "assert paper.issn in ISSN_MAP and paper.doi, paper\n",
+    "# web = StealthSelenium(timeout=15, headless=True)\n",
     "web = Selenium(timeout=15, headless=False)\n",
-    "markdown, soup = web.run(paper.doi, DATA[paper.issn])\n",
+    "markdown, soup = web.run(paper.doi, ISSN_MAP[paper.issn])\n",
     "if markdown:\n",
     "    with open('saved.md', 'wt') as fp:\n",
     "        fp.write(markdown)\n",
@@ -148,7 +148,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "454528c7-5efa-44a7-b8fc-b0b18c97826a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "assert paper.issn in DATA and paper.doi, paper\n",
@@ -162,63 +164,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b0e00fd-7233-4cc3-ad5c-c9c74158a108",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "markdown is None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c99bcf7f-9ac8-4b37-a58b-0fddba16011a",
    "metadata": {},
    "outputs": [],
    "source": [
     "HTML(web.find_html())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16043c81-34ce-4bb3-a174-03386dba8ad5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bs4 import BeautifulSoup\n",
-    "soup = BeautifulSoup(web.find_html(),\"lxml\")\n",
-    "print(soup.prettify())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4509e55a-9efa-4c6c-b42b-c90bc4a60c52",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "c=web.pdf(DATA[p.issn])\n",
-    "if c is not None:\n",
-    "    with open('saved.pdf', 'wb') as fp:\n",
-    "        fp.write(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3b4813b-c847-4452-b5a7-e2bfc663ade3",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "soup=web.resoupify()\n",
-    "pages = soup.select('[id=\"viewer\"] .page')\n",
-    "\n",
-    "Markdown(web.tofrag(web.find_html(), Location('[id=\"viewer\"] .page')))"
    ]
   },
   {
@@ -353,6 +303,227 @@
    "source": [
     "x.save_content(\"saved.xml\", pretty=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab593284-e993-47e6-ab7d-1fb50509f5eb",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "\n",
+    "## Runner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b640e0cf-7bde-422c-b6b7-6ef880d0bb4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scifeeder.runner import Runner\n",
+    "from scifeeder.cache import Cache\n",
+    "from scifeeder.epmc import EPMC\n",
+    "from scifeeder.ncbi import NCBI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d7a0eff-acff-4e11-bb4e-5a99c03c1d73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scifeeder.utils import read_papers_csv\n",
+    "from scifeeder.types import Paper\n",
+    "papers=list(read_papers_csv('suba_j.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b03d47d4-20f7-42d3-b9d4-5ed413d6d0b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DONE = {'11511543', '20847098', '21051552'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bbb86f2-d473-40b6-9c7b-902448f12e04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in papers:\n",
+    "    if p.pmcid and p.pmid not in DONE and p.year > 2010:\n",
+    "        break\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56e585a1-d81e-4146-a1dd-ac96d907fec6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scifeeder.ncbi import NCBI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "368e899a-130c-494a-ba36-20ea8b219d0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = NCBI.from_pmcid(p.pmcid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8f11cd5-5556-40b7-8976-56b8c8a83c84",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "markdown = x.article()\n",
+    "Markdown(markdown)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4755a329-081b-43e3-8c71-278b1a96562c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len([p for p in papers if p.pmcid]), len(papers), len([p for p in papers if p.doi])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "deac2b48-efa6-4f3e-8e29-b2820e1d77ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "what = [p for p in papers if not p.doi and not p.pmcid]\n",
+    "\n",
+    "for p in what:\n",
+    "    url=f\"https://ncbi.nlm.nih.gov/pubmed/{p.pmid}/\"\n",
+    "    print(p.pmid, p.year, url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0246036c-c1bc-4339-a789-810e976ecea7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html = x.html(True)\n",
+    "with open('saved.html', 'wt') as fp:\n",
+    "    fp.write(html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef94dfdd-a61e-4ed3-b96e-bda5eb05ad65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cache = Cache('mycache')\n",
+    "cache.fetch_ncbi(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f02cf53c-1768-42a9-941d-0ec2965cc7d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scifeeder.runner import Runner\n",
+    "from scifeeder.selenium_cls import Selenium, StealthSelenium\n",
+    "from scifeeder.cache import Cache\n",
+    "\n",
+    "from scifeeder.issn import ISSN_MAP\n",
+    "class SeleniumRunner(Runner):\n",
+    "\n",
+    "    def start(self):\n",
+    "\n",
+    "        self.cache = Cache('scache')\n",
+    "        self.web = self.create_driver()\n",
+    "        self.ok = 0\n",
+    "        self.failed = 0\n",
+    "\n",
+    "    def create_driver(self):\n",
+    "        return StealthSelenium(headless=True)\n",
+    "        \n",
+    "    def work(self, paper, tqdm):\n",
+    "        tqdm.write(f'working... {paper.pmid}')\n",
+    "        if not paper.doi:\n",
+    "            return 'nodoi'\n",
+    "        if paper.issn not in ISSN_MAP:\n",
+    "            return 'noissn'\n",
+    "\n",
+    "        try:\n",
+    "            html =  self.web.fetch_html(paper.doi,ISSN_MAP[paper.issn])\n",
+    "            if html is None:\n",
+    "                self.web = self.create_driver()\n",
+    "                tqdm.write('retry....')\n",
+    "                html =  self.web.fetch_html(paper.doi,ISSN_MAP[paper.issn])\n",
+    "            if html is None:\n",
+    "                retval= 'cc'\n",
+    "            elif not html:\n",
+    "                retval= 'timeout'\n",
+    "            else:\n",
+    "                self.cache.save_html(paper, html)\n",
+    "                retval = 'ok'\n",
+    "        except Exception as e:\n",
+    "            tqdm.write(f'failed: {paper.pmid} {e}')\n",
+    "            retval= 'failed'\n",
+    "        tqdm.write(retval)\n",
+    "        return retval\n",
+    "\n",
+    "    def end(self):\n",
+    "        self.web.close()\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7f6f190-a68f-4321-8dc0-da8895e9b593",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runner = SeleniumRunner('suba_j.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d7bfd25-b1fe-4e53-b6bf-b3e5f49a5556",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runner.run(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf09e260-d04d-48a2-899f-e80ebd89e840",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
